--- a/aur-repo/smartdns-rs-git/lilac.yaml
+++ b/aur-repo/smartdns-rs-git/lilac.yaml
@@ -4,8 +4,8 @@ pre_build: vcs_update
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
-repo_depends:
-  - python-libclang
+# repo_depends:
+#   - python-libclang
 update_on:
   - source: github
     github: mokeyish/smartdns-rs
