--- a/aur-repo/fire-tool/PKGBUILD
+++ b/aur-repo/fire-tool/PKGBUILD
@@ -3,13 +3,14 @@
 
 pkgname=fire-tool
 pkgver=1.0.1.5
-pkgrel=4
+pkgrel=5
 pkgdesc="Embedfire Tool support Serial communication, TCP/UDP communication, camera and PID debuggingVisit https://www.embedfire.com for more information."
 arch=('x86_64')
 url="https://www.embedfire.com"
 license=('unknown')
 depends=('qt5-serialport' 'qt5-networkauth' 'qt5-svg' 'qt5-xcb-private-headers')
 makedepends=()
+# groups=()
 options=('!strip' '!emptydirs')
 source_x86_64=("https://cloud.embedfire.com/software/FireTools/fireTools.deb")
 sha512sums_x86_64=('b6ea80999c5f440aa7b080b4fb535d446a1150f7fd538658921a2112e1d3e4a5ccb363dc4e20ca58ceb6784db337add10312f217b177ada93a383948e6b232a6')
