--- a/aur-repo/mfgtools-git/PKGBUILD
+++ b/aur-repo/mfgtools-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgbase=mfgtools-git
 pkgname=(mfgtools{,-doc}-git)
-pkgver=1.5.197.r3.gb3163b7
+pkgver=1.5.201.r0.g727fc2b
 pkgrel=1
 epoch=
 pkgdesc="uuu (Universal Update Utility), mfgtools 3.0. Freescale/NXP I.MX Chip image deploy tools."
