rmqtt-git: auto updated to 0.11.0.r4.g3052d7f-1

--- a/aur-repo/rmqtt-git/PKGBUILD
+++ b/aur-repo/rmqtt-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgbase=rmqtt-git
 pkgname=rmqtt-git
-pkgver=0.11.0.r2.g38ae1fb
+pkgver=0.11.0.r4.g3052d7f
 pkgrel=1
 pkgdesc="MQTT Server/MQTT Broker - Scalable Distributed MQTT Message Broker for IoT in the 5G Era"
 arch=($CARCH)
