--- a/aur-repo/ts.net-git/PKGBUILD
+++ b/aur-repo/ts.net-git/PKGBUILD
@@ -18,8 +18,8 @@ depends=(bash
 makedepends=(
     curl
     git
-    dotnet-runtime-bin
-    dotnet-sdk-bin)
+    dotnet-runtime
+    dotnet-sdk)
 optdepends=('scopehal-apps: glscopeclient and other client applications for libscopehal')
 backup=()
 options=('!strip' '!debug' '!lto')
