--- a/aur-repo/ts.net-git/PKGBUILD
+++ b/aur-repo/ts.net-git/PKGBUILD
@@ -18,7 +18,7 @@ depends=(bash
 makedepends=(
     curl
     git
-    "dotnet-host=9.0.0"
+    'dotnet-host=9.0.0'
 )
 optdepends=('scopehal-apps: glscopeclient and other client applications for libscopehal')
 backup=()
