--- a/aur-repo/ts.net-git/lilac.yaml
+++ b/aur-repo/ts.net-git/lilac.yaml
@@ -4,6 +4,7 @@ pre_build: vcs_update
 post_build_script: |
   git_pkgbuild_commit()
 repo_depends:
+  - dotnet-core-bin
   - dotnet-host-bin
 update_on:
   - source: github
