--- a/aur-repo/pdcom-gateway/PKGBUILD
+++ b/aur-repo/pdcom-gateway/PKGBUILD
@@ -12,9 +12,9 @@ provides=(${pkgname})
 conflicts=(${pkgname})
 replaces=()
 depends=(
+    pdcom
     python
     python-libconf
-    python-pdcom
 )
 makedepends=(
     python-build
