--- a/aur-repo/res-downloader/PKGBUILD
+++ b/aur-repo/res-downloader/PKGBUILD
@@ -3,7 +3,7 @@
 pkgname=res-downloader
 pkgver=3.0.1
 pkgrel=1
-pkgdesc="支持视频号、小程序、抖音、快手、小红书、直播流、酷狗、QQ音乐等常见网络资源! "
+pkgdesc="This is a high-value and high-performance and diverse resource downloader called res-downloader"
 arch=($CARCH)
 url="https://github.com/putyy/res-downloader"
 license=('Apache-2.0')
@@ -30,7 +30,7 @@ install=${pkgname}.install
 source=("${pkgname}-${pkgver}.tar.gz::${url}/archive/refs/tags/${pkgver}.tar.gz"
     ${pkgname}.install)
 sha256sums=('952ba006706972e3464e5da9834c4cc1c04a63ae55823ee3cd4feb3be26e8512'
-            '23a4cbb1eb388d0a847bbc9918a103769b15ad22d462840fe5d9d6bd6a720cbe')
+    '23a4cbb1eb388d0a847bbc9918a103769b15ad22d462840fe5d9d6bd6a720cbe')
 
 build() {
     cd "${srcdir}/${pkgname}-${pkgver}/"
@@ -53,16 +53,5 @@ package() {
 
     install -Dvm755 build/bin/${pkgname} -t ${pkgdir}/usr/bin
     install -Dvm644 build/appicon.png ${pkgdir}/usr/share/icons/hicolor/512x512/apps/${pkgname}.png
-    install -Dvm644 build/linux/${pkgname}.desktop ${pkgdir}/usr/share/applications/${pkgname}.desktop
-    #     install -Dvm644 /dev/stdin ${pkgdir}/usr/share/applications/${pkgname}.desktop <<EOF
-    # [Desktop Entry]
-    # Categories=
-    # Comment=${pkgdesc}
-    # Exec=${pkgname}
-    # Icon=${pkgname}.png
-    # Name=${pkgname}
-    # Terminal=false
-    # Type=Application
-    #
-    # EOF
+    install -Dvm644 build/linux/Debian/usr/share/applications/${pkgname}.desktop ${pkgdir}/usr/share/applications/${pkgname}.desktop
 }
