--- a/aur-repo/res-downloader/PKGBUILD
+++ b/aur-repo/res-downloader/PKGBUILD
@@ -57,5 +57,16 @@ package() {
 
     install -Dvm755 build/bin/${pkgname} -t ${pkgdir}/usr/bin
     install -Dvm644 build/appicon.png ${pkgdir}/usr/share/icons/hicolor/512x512/apps/${pkgname}.png
-    install -Dvm644 build/linux/Debian/usr/share/applications/${pkgname}.desktop ${pkgdir}/usr/share/applications/${pkgname}.desktop
+    #     install -Dvm644 build/linux/Arch/${pkgname}.desktop ${pkgdir}/usr/share/applications/${pkgname}.desktop
+    install -Dvm644 /dev/stdin ${pkgdir}/usr/share/applications/${pkgname}.desktop <<EOF
+[Desktop Entry]
+Type=Application
+Name=res-downloader
+Comment=This is a high-value and high-performance and diverse resource downloader called res-downloader
+Exec=/usr/bin/res-downloader
+Icon=/usr/share/icons/hicolor/256x256/apps/res-downloader.png
+Terminal=false
+Categories=Utility
+
+EOF
 }
