--- a/aur-repo/res-downloader/PKGBUILD
+++ b/aur-repo/res-downloader/PKGBUILD
@@ -34,7 +34,7 @@ install=${pkgname}.install
 source=("${pkgname}-${pkgver}.tar.gz::${url}/archive/refs/tags/${pkgver}.tar.gz"
     ${pkgname}.install)
 sha256sums=('a4312e1e1cdb8e814c715dada939566376e77f1a0d9f5161a2dbc50445cfe503'
-            '23a4cbb1eb388d0a847bbc9918a103769b15ad22d462840fe5d9d6bd6a720cbe')
+    '23a4cbb1eb388d0a847bbc9918a103769b15ad22d462840fe5d9d6bd6a720cbe')
 
 build() {
     cd "${srcdir}/${pkgname}-${pkgver}/"
@@ -55,16 +55,16 @@ package() {
 
     install -Dvm755 build/bin/${pkgname} -t ${pkgdir}/usr/bin
     install -Dvm644 build/appicon.png ${pkgdir}/usr/share/icons/hicolor/512x512/apps/${pkgname}.png
-    #     install -Dvm644 build/linux/Arch/${pkgname}.desktop ${pkgdir}/usr/share/applications/${pkgname}.desktop
-    install -Dvm644 /dev/stdin ${pkgdir}/usr/share/applications/${pkgname}.desktop <<EOF
-[Desktop Entry]
-Type=Application
-Name=res-downloader
-Comment=This is a high-value and high-performance and diverse resource downloader called res-downloader
-Exec=/usr/bin/res-downloader
-Icon=/usr/share/icons/hicolor/256x256/apps/res-downloader.png
-Terminal=false
-Categories=Utility
-
-EOF
+    install -Dvm644 build/linux/Arch/${pkgname}.desktop ${pkgdir}/usr/share/applications/${pkgname}.desktop
+    #     install -Dvm644 /dev/stdin ${pkgdir}/usr/share/applications/${pkgname}.desktop <<EOF
+    # [Desktop Entry]
+    # Type=Application
+    # Name=res-downloader
+    # Comment=This is a high-value and high-performance and diverse resource downloader called res-downloader
+    # Exec=/usr/bin/res-downloader
+    # Icon=/usr/share/icons/hicolor/256x256/apps/res-downloader.png
+    # Terminal=false
+    # Categories=Utility
+    #
+    # EOF
 }
