--- a/aur-repo/res-downloader/PKGBUILD
+++ b/aur-repo/res-downloader/PKGBUILD
@@ -61,8 +61,8 @@ package() {
     # Type=Application
     # Name=res-downloader
     # Comment=This is a high-value and high-performance and diverse resource downloader called res-downloader
-    # Exec=/usr/bin/res-downloader
-    # Icon=/usr/share/icons/hicolor/256x256/apps/res-downloader.png
+    # Exec=res-downloader
+    # Icon=res-downloader.png
     # Terminal=false
     # Categories=Utility
     #
