--- a/aur-repo/n-m3u8dl-re-git/PKGBUILD
+++ b/aur-repo/n-m3u8dl-re-git/PKGBUILD
@@ -17,7 +17,9 @@ makedepends=(
     zlib
     krb5
     git
-    dotnet-core-bin)
+    dotnet-runtime
+    dotnet-sdk
+)
 backup=()
 options=('!strip' '!debug' '!lto')
 source=("${pkgname}::git+${url}.git")
