--- a/aur-repo/ts.net-git/lilac.yaml
+++ b/aur-repo/ts.net-git/lilac.yaml
@@ -3,8 +3,8 @@ maintainers:
 pre_build: vcs_update
 post_build_script: |
   git_pkgbuild_commit()
-repo_depends:
-  - dotnet-core-bin
+# repo_depends:
+#   - dotnet-core-bin
 update_on:
   - source: github
     github: EEVengers/TS.NET
