--- a/aur-repo/freedom-devicetree-tools/PKGBUILD
+++ b/aur-repo/freedom-devicetree-tools/PKGBUILD
@@ -19,7 +19,11 @@ makedepends=(
     automake
 )
 checkdepends=()
-optdepends=()
+optdepends=(
+    'nuclei-openocd: nuclei-openocd 是 Nuclei Studio IDE 的调试工具。'
+    'nuclei-gcc: nuclei-gcc 是 Nuclei Studio IDE 的编译工具。'
+    'nucleistudioide: Nuclei Studio IDE 是基于 MCU Eclipse IDE 开发的一款针对芯来公司处理器核产品的集成开发环境工具，用于 RISC-V 开发继承了 Eclipse IDE 平台的各种优势。'
+)
 provides=()
 conflicts=()
 replaces=()
