--- a/aur-repo/deepin-unioncode-git/PKGBUILD
+++ b/aur-repo/deepin-unioncode-git/PKGBUILD
@@ -62,6 +62,7 @@ makedepends=(
     libxi
     lxqt-build-tools
     lxqt-build-tools-qt5
+    qt5-networkauth
     qt5-tools
     qtermwidget
     openssl
