--- a/aur-repo/cargo-docset/lilac.yaml
+++ b/aur-repo/cargo-docset/lilac.yaml
@@ -1,6 +1,8 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['iamawacko'])
+pre_build_script: |
+  aur_pre_build(maintainers=['iamawacko'])
+  add_makedepends(['cargo-expand'])
 post_build: aur_post_build
 update_on:
   - source: aur
