--- a/aur-repo/mecab-ipadic/lilac.yaml
+++ b/aur-repo/mecab-ipadic/lilac.yaml
@@ -1,6 +1,6 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['FSMaxB'])
+pre_build_script: aur_pre_build(maintainers=[' envolution'])
 post_build: aur_post_build
 repo_depends:
   - mecab-git
