--- a/aur-repo/phosphor-logging-git/lilac.yaml
+++ b/aur-repo/phosphor-logging-git/lilac.yaml
@@ -6,6 +6,7 @@ post_build_script: |
   update_aur_repo()
 repo_depends:
   - sdbusplus-git
+  - sdeventplus-git
   - stdplus-git
   - phosphor-dbus-interfaces-git
 update_on:
