--- a/aur-repo/savvycan/lilac.yaml
+++ b/aur-repo/savvycan/lilac.yaml
@@ -1,6 +1,8 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers='Dz99')
+pre_build_script: |
+  aur_pre_build(maintainers='Dz99')
+  add_makedepends(['qt5-xmlpatterns'])
 post_build: aur_post_build
 repo_depends:
   - qt5-serialbus-git
