--- a/aur-repo/wlink-git/PKGBUILD
+++ b/aur-repo/wlink-git/PKGBUILD
@@ -26,15 +26,16 @@ source=("${pkgname}::git+$url.git")
 sha256sums=('SKIP')
 
 prepare() {
-    cd "${srcdir}/${pkgname}/"
-    git tag --delete nightly
+    git -C "${srcdir}/${pkgname}" clean -dfx
+    #     cd "${srcdir}/${pkgname}/"
+    #     git tag --delete nightly
 }
 
 pkgver() {
     cd "${srcdir}/${pkgname}"
     (
         set -o pipefail
-        git tag --delete nightly && git describe --long --tag --abbrev=7 2>/dev/null | sed 's/^v//g;s/\([^-]*-g\)/r\1/;s/-/./g' ||
+        git describe --exclude=nightly --long --tag --abbrev=7 2>/dev/null | sed 's/^v//g;s/\([^-]*-g\)/r\1/;s/-/./g' ||
             printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short=7 HEAD)"
     )
 }
