--- a/aur-repo/wlink-git/PKGBUILD
+++ b/aur-repo/wlink-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=wlink-git
-pkgver=0.1.0.r0.g42127dc
+pkgver=0.1.1.r3.g217f0e5
 pkgrel=1
 pkgdesc="wlink - WCH-Link(RV) command line tool"
 arch=($CARCH)
