--- a/aur-repo/rtools-git/PKGBUILD
+++ b/aur-repo/rtools-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 _pkgname=RTools
 pkgname=rtools-git
-pkgver=1.0.0.r32.g9dd42ad
+pkgver=1.0.0.r35.g4a7c8b9
 pkgrel=1
 pkgdesc="RTools(米饭工具集)是开发工具集桌面悬浮窗软件，每一个子功能如同一颗米粒组成一碗米饭。"
 arch=($CARCH)
@@ -11,7 +11,7 @@ license=('Apache-2.0')
 provides=(${pkgname%-git})
 conflicts=(${pkgname%-git})
 #replaces=(${pkgname})
-depends=('qt5-charts' 'qt5-serialport' 'qt5-networkauth' 'qt5-base' 'qt5-mqtt')
+depends=('qt5-charts' 'qt5-serialport' 'qt5-networkauth' 'qt5-base')
 makedepends=('qt5-tools' 'git')
 optdepends=('jlink-software-and-documentation: Segger JLink software & documentation pack for Linux')
 backup=()
