--- a/aur-repo/115-browser-bin/PKGBUILD
+++ b/aur-repo/115-browser-bin/PKGBUILD
@@ -22,7 +22,7 @@ provides=(${pkgname%-bin})
 conflicts=(${pkgname%-bin})
 replaces=()
 pkgdesc="115 Browser / 115 浏览器"
-license=('Commercial')
+license=('LicenseRef-Commercial')
 url="https://115.com/product_browser"
 source_x86_64=("${pkgname}-${pkgver}.deb::https://down.115.com/client/115pc/lin/115br_v${pkgver}.deb")
 sha256sums_x86_64=('e11bccb33290e589f0ecf161d5f1a3fc5a2e61298d29e200acd8420f71d58bd1')
