--- a/aur-repo/edrawmax-cn/PKGBUILD
+++ b/aur-repo/edrawmax-cn/PKGBUILD
@@ -20,7 +20,7 @@ depends=(
     zlib)
 makedepends=(
     libarchive)
-license=('Commercial')
+license=('LicenseRef-Commercial')
 url="https://www.edrawsoft.cn/edrawmax/"
 # source_x86_64=("https://cc-download.edrawsoft.cn/EdrawMax_${pkgver}_cn.deb")
 source_x86_64=("${pkgname}-${pkgver}.deb::https://cc-download.wondershare.cc/prd/edrawmax_full5374.deb")
