--- a/aur-repo/mounriver-studio-community-bin/PKGBUILD
+++ b/aur-repo/mounriver-studio-community-bin/PKGBUILD
@@ -6,7 +6,7 @@ pkgver=190
 pkgrel=3
 arch=('x86_64')
 url='http://www.mounriver.com/'
-license=('GPL2' 'GPL3' 'custom')
+license=('LicenseRef-custom')
 provides=('MounRiver-Studio-Community-Linux' ${pkgname%-bin})
 conflicts=(${pkgname%-bin})
 depends=(
