--- a/aur-repo/mounriver-studio-toolchain-bin/PKGBUILD
+++ b/aur-repo/mounriver-studio-toolchain-bin/PKGBUILD
@@ -6,7 +6,7 @@ pkgver=1.92.1
 pkgrel=3
 arch=('x86_64')
 url='http://www.mounriver.com/'
-license=('GPL2' 'GPL3' 'custom')
+license=('LicenseRef-custom')
 provides=('MRS-Toolchain')
 makedepends=('tar')
 optdepends=('ch34x-dkms-git: CH341SER driver with fixed bug'
