--- a/aur-repo/mounriverstudio-bin/PKGBUILD
+++ b/aur-repo/mounriverstudio-bin/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=210
 pkgrel=4
 arch=('x86_64')
 url='http://www.mounriver.com/'
-license=('custom: commercial')
+license=('LicenseRef-commercial')
 provides=('MounRiverStudio-Linux' ${pkgname%-bin})
 conflicts=(${pkgname%-bin})
 depends=(
