--- a/aur-repo/at-link-console-bin/PKGBUILD
+++ b/aur-repo/at-link-console-bin/PKGBUILD
@@ -6,7 +6,7 @@ pkgrel=2
 pkgdesc="Artery AT LINK Console 是一款基于 MCU Bootloader 的命令行应用程序。支持AT32 MCU「在电路编程」Console工具"
 arch=('x86_64')
 url="https://www.arterytek.com/cn/product/AT32F403.jsp"
-license=('Commercial')
+license=('LicenseRef-Commercial')
 provides=(${pkgname%-bin} AT-LINK_Console)
 conflicts=(${pkgname%-bin})
 replaces=()
