--- a/aur-repo/at32-bootloader-doc/PKGBUILD
+++ b/aur-repo/at32-bootloader-doc/PKGBUILD
@@ -7,7 +7,7 @@ pkgrel=1
 pkgdesc="Artery AT MCU Bootloader ISP 协议文档"
 arch=(any)
 url="https://www.arterytek.com/cn/support/index.jsp?index=5"
-license=('Commercial')
+license=('LicenseRef-Commercial')
 provides=(${pkgbase} ${pkgname})
 conflicts=(${pkgbase} ${pkgname})
 replaces=()
