--- a/aur-repo/at32-work-bench-bin/PKGBUILD
+++ b/aur-repo/at32-work-bench-bin/PKGBUILD
@@ -8,7 +8,7 @@ pkgrel=1
 pkgdesc="AT32 MCU 图形化配置软件，生成初始化 C 代码(目前仅支持 AT32F421 系列)"
 arch=('x86_64')
 url="https://www.arterytek.com/cn/support/index.jsp?index=5"
-license=('Commercial')
+license=('LicenseRef-Commercial')
 provides=(${pkgname})
 conflicts=()
 replaces=()
