--- a/aur-repo/clouddrive-decrypt-git/PKGBUILD
+++ b/aur-repo/clouddrive-decrypt-git/PKGBUILD
@@ -6,7 +6,7 @@ pkgrel=6
 pkgdesc="clouddrive-decrypt is a standalone tool designed to demo how to decrypt files encrypted by CloudDrive2."
 arch=($CARCH)
 url="https://github.com/cloud-fs/clouddrive-decrypt"
-license=('Commercial')
+license=('LicenseRef-Commercial')
 provides=(${pkgname%-git})
 conflicts=(${pkgname%-git})
 replaces=()
