--- a/aur-repo/jlc-assistant-bin/PKGBUILD
+++ b/aur-repo/jlc-assistant-bin/PKGBUILD
@@ -6,7 +6,7 @@ pkgrel=20
 pkgdesc="嘉立创下单助手:该应用为您下单提供便利，快速获取优惠及下单信息，无需在网站等待审核审单！在下单助手下单立享打折优惠！ "
 arch=('x86_64')
 url="https://www.jlc.com/portal/appDownloadsWithConfig.html"
-license=('custom')
+license=('LicenseRef-custom')
 provides=(${pkgname%-bin})
 conflicts=(${pkgname%-bin})
 replaces=(${pkgname%-bin})
@@ -31,29 +31,27 @@ package() {
 
     # icon
     local _icon
-    for _icon in 16 32 64 72 128 256 512;
-    do
+    for _icon in 16 32 64 72 128 256 512; do
         install -Dm0644 icon/png/${_icon}.png \
-                        ${pkgdir}/usr/share/icons/hicolor/${_icon}x${_icon}/apps/${pkgname%-bin}.png
+            ${pkgdir}/usr/share/icons/hicolor/${_icon}x${_icon}/apps/${pkgname%-bin}.png
     done
 
-     # desktop entry
+    # desktop entry
     install -Dm0644 ${pkgname%-bin}.dkt \
-                    ${pkgdir}/usr/share/applications/${pkgname%-bin}.desktop
+        ${pkgdir}/usr/share/applications/${pkgname%-bin}.desktop
 
     sed -i 's|/opt/jlc-assistant/icon/png/128.png|jlc-assistant.png|g' \
-                                    ${pkgdir}/usr/share/applications/${pkgname%-bin}.desktop
+        ${pkgdir}/usr/share/applications/${pkgname%-bin}.desktop
     sed -i 's|/opt/jlc-assistant/||g' ${pkgdir}/usr/share/applications/${pkgname%-bin}.desktop
 
     # jlc-assistant file
-    install -Dm0755 /dev/stdin ${pkgdir}/usr/bin/${pkgname%-bin} << EOF
+    install -Dm0755 /dev/stdin ${pkgdir}/usr/bin/${pkgname%-bin} <<EOF
 #!/bin/sh
 
 exec electron /usr/lib/jlc-assistant/resources/app.asar " \$@"
 EOF
 
     # LICENSE
-#     install -Dm0644 LICENSE ${pkgdir}/usr/share/licenses/${pkgname%-bin}/LICENSE
-
+    #     install -Dm0644 LICENSE ${pkgdir}/usr/share/licenses/${pkgname%-bin}/LICENSE
 
 }
