--- a/aur-repo/mockitt-cn/PKGBUILD
+++ b/aur-repo/mockitt-cn/PKGBUILD
@@ -17,7 +17,7 @@ depends=(
     glibc)
 makedepends=(
     libarchive)
-license=('Commercial')
+license=('LicenseRef-Commercial')
 url="https://modao.cc/feature/downloads.html"
 source_x86_64=("${pkgname}-${pkgver}.deb::https://cdn-release.modao.cc/desktop/prod-${pkgver}/linux/Mockitt-linux-x64-${pkgver}.deb")
 sha256sums_x86_64=('b8641d8b8e895e1ec31d65ebbd58ede809346a33adeea7a63453c95442e828ca')
