--- a/aur-repo/mwtool-git/PKGBUILD
+++ b/aur-repo/mwtool-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=mwtool-git
-pkgver=0.0.1.3.r9.g429fba8
+pkgver=0.0.1.3.r11.g1d28bf2
 pkgrel=1
 pkgdesc="云固件配置工具箱"
 arch=('any')
