--- a/aur-repo/libpldm-git/PKGBUILD
+++ b/aur-repo/libpldm-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=libpldm-git
-pkgver=0.11.0.r9.g94e2d75
+pkgver=0.11.0.r15.gfa2e265
 pkgrel=1
 epoch=
 pkgdesc="This is a library which deals with the encoding and decoding of PLDM messages."
