--- a/aur-repo/nutool-usbtoserialport-git/PKGBUILD
+++ b/aur-repo/nutool-usbtoserialport-git/PKGBUILD
@@ -2,8 +2,8 @@
 
 pkgname=nutool-usbtoserialport-git
 _pkgname=NuTool-USBtoSerialPort
-pkgver=r20.e7da256
-pkgrel=7
+pkgver=1.02.r0.g9b2404b
+pkgrel=1
 epoch=
 pkgdesc="NuTool-USB to Serial Port is a host-side software, it passes through and montiors I2C, SPI and CAN data of Nu-Link2-Pro® adapter"
 arch=($CARCH)
