jlink-software-and-documentation: auto updated to 63:8.12b-0

--- a/aur-repo/jlink-software-and-documentation/PKGBUILD
+++ b/aur-repo/jlink-software-and-documentation/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: pzl <alsoelp at gmail dot com>
 
 pkgname=jlink-software-and-documentation
-pkgver=8.12a
+pkgver=8.12b
 pkgrel=0
 epoch=63
 pkgdesc="Segger JLink software & documentation pack for Linux"
@@ -37,10 +37,10 @@ desktops=(
         "JTAGLoadExe.desktop"
 )
 source+=(${desktops[@]})
-md5sums_x86_64=('d7de74748d7f01cfec0c64961f655dd8')
-md5sums_i686=('9252f7ad7531df56c19b04df1e27da68')
-md5sums_aarch64=('14ed2c2d1f97d8ed4ca856b77ff3aaf8')
-md5sums_armv7h=('f5284283b2eb50d69f03153bb957ad21')
+md5sums_x86_64=('f927e9301d513b582fb82037ee4237fc')
+md5sums_i686=('3bb6af62ce6462716eddccae3f1abed7')
+md5sums_aarch64=('b5d682939447e8d1d59e721a94762a36')
+md5sums_armv7h=('e65c15cc0045c92a691a3d622afafbbc')
 
 md5sums=("a57d93b791581c1f36e4c672303bb85d"
          "02c4941650a2bd345b03dd958313d4c5"
