--- a/aur-repo/wchisp-git/PKGBUILD
+++ b/aur-repo/wchisp-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=wchisp-git
-pkgver=0.3.0.r12.g37bd09d
+pkgver=0.3.0.r13.gf18828c
 pkgrel=1
 pkgdesc="WCH ISP Tool in Rust"
 arch=(x86_64
