--- a/aur-repo/sunloginclient/lilac.yaml
+++ b/aur-repo/sunloginclient/lilac.yaml
@@ -1,6 +1,8 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers='palytoxin')
+pre_build_script: |
+  aur_pre_build(maintainers='palytoxin')
+  run_cmd(['updpkgsums'])
 post_build: aur_post_build
 # repo_depends:
 #   -
