--- a/aur-repo/flutter-artifacts-google-bin/lilac.yaml
+++ b/aur-repo/flutter-artifacts-google-bin/lilac.yaml
@@ -2,9 +2,9 @@ maintainers:
   - github: taotieren
 pre_build_script: aur_pre_build(maintainers='WithTheBraid')
 post_build: aur_post_build
-repo_depends:
-  - flutter-artifacts-google-bin
+# repo_depends:
+#   -
 update_on:
   - source: aur
-    aur: flutter
+    aur: flutter-artifacts-google-bin
 # - alias: python
