--- a/aur-repo/mqttfx-bin/lilac.yaml
+++ b/aur-repo/mqttfx-bin/lilac.yaml
@@ -1,10 +1,25 @@
+# maintainers:
+#   - github: taotieren
+# pre_build_script: aur_pre_build(maintainers=['taotieren'])
+# post_build: aur_post_build
+# repo_depends:
+#   - log4jscanner-bin
+# update_on:
+#   - source: aur
+#     aur: mqttfx-bin
+# - alias: python
+
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['taotieren'])
-post_build: aur_post_build
-repo_depends:
-  - log4jscanner-bin
+pre_build_script: |
+  update_pkgver_and_pkgrel(_G.newver)
+post_build_script: |
+  git_pkgbuild_commit()
+  update_aur_repo()
+
 update_on:
-  - source: aur
-    aur: mqttfx-bin
-# - alias: python
+  - source: regex
+    url: https://download.softblade.net/
+    regex: 'mqttfx-([\d.]+)-unix.sh'
+# - source: manual
+#   manual: 1
