--- a/aur-repo/flutter/lilac.yaml
+++ b/aur-repo/flutter/lilac.yaml
@@ -2,8 +2,8 @@ maintainers:
   - github: taotieren
 pre_build_script: aur_pre_build(maintainers='WithTheBraid')
 post_build: aur_post_build
-repo_depends:
-  - flutter-artifacts-google-bin
+# repo_depends:
+#   - flutter-artifacts-google-bin
 update_on:
   - source: aur
     aur: flutter
