--- a/aur-repo/kpatch-git/PKGBUILD
+++ b/aur-repo/kpatch-git/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Quey-Liang Kao <s101062801@m101.nthu.edu.tw>
 
 pkgname=kpatch-git
-pkgver=0.9.9.r68.g9ba1ce8
+pkgver=0.9.9.r72.gb57508e
 pkgrel=1
 pkgdesc='Live kernel patching (git)'
 arch=($CARCH)
