--- a/aur-repo/proxmark3-iceman-git/PKGBUILD
+++ b/aur-repo/proxmark3-iceman-git/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=proxmark3-iceman-git
-pkgver=4.19552.r248.g9c05f2c
+pkgver=4.19552.r250.g2f2f3d9
 pkgrel=1
 pkgdesc='RRG / Iceman repo - Proxmark3 RDV4.0 and other Proxmark3 platforms.'
 arch=('x86_64')
