--- a/aur-repo/savvycan/PKGBUILD
+++ b/aur-repo/savvycan/PKGBUILD
@@ -4,14 +4,14 @@
 pkgname="savvycan"
 pkgproper="SavvyCAN"
 pkgver="V213"
-pkgrel=1
+pkgrel=2
 epoch=1
 pkgdesc="QT-based CAN bus analysis tool"
 url="https://github.com/collin80/SavvyCAN"
 license=('MIT')
 arch=('x86_64')
 depends=('qt5-serialbus')
-makedepends=('qt5-base' 'qt5-tools' 'qt5-declarative')
+makedepends=("qt5-3d" "qt5-base" "qt5-tools")
 optdepends=('qt5-clx000-git: clx000 loggers')
 source=("https://github.com/collin80/SavvyCAN/archive/refs/tags/${pkgver}.tar.gz")
 dirvername="${pkgver#V}"
