--- a/aur-repo/python-ffpyplayer/PKGBUILD
+++ b/aur-repo/python-ffpyplayer/PKGBUILD
@@ -6,7 +6,7 @@ pkgver=4.5.2
 pkgrel=1
 epoch=
 pkgdesc="A cython implementation of an ffmpeg based player."
-arch=('any')
+arch=($CARCH)
 url="https://pypi.org/project/${_name}"
 license=('LGPL-3.0-only')
 groups=()
