--- a/aur-repo/python-123-client/PKGBUILD
+++ b/aur-repo/python-123-client/PKGBUILD
@@ -36,6 +36,9 @@ makedepends=(
     python-installer
     python-wheel
     python-setuptools)
+optdepends=(
+    'python-fastapi: FastAPI framework, high performance, easy to learn, fast to code, ready for production'
+)
 options=('!strip' '!debug')
 source=("${_name}-${pkgver}.tar.gz::https://files.pythonhosted.org/packages/source/${_name::1}/$_name/$_name-$pkgver.tar.gz")
 noextract=()
