--- a/aur-repo/python-alist-proxy/PKGBUILD
+++ b/aur-repo/python-alist-proxy/PKGBUILD
@@ -36,6 +36,9 @@ makedepends=(
     python-installer
     python-wheel
     python-setuptools)
+optdepends=(
+    'alist: File list program that supports multiple storage'
+)
 options=('!strip' '!debug')
 source=("${_name}-${pkgver}.tar.gz::https://files.pythonhosted.org/packages/source/${_name::1}/$_name/$_name-$pkgver.tar.gz")
 noextract=()
