--- a/aur-repo/magiskboot-git/PKGBUILD
+++ b/aur-repo/magiskboot-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgbase=magiskboot-git
 pkgname=magiskboot-git
-pkgver=28101.77.r9.gd406ec1
+pkgver=28101.77.r10.gd9f4f3c
 pkgrel=1
 pkgdesc="Magiskboot_ndk"
 arch=($CARCH)
