bcu-git: auto updated to 1.1.108.r0.g4dea0ed-1

--- a/aur-repo/bcu-git/PKGBUILD
+++ b/aur-repo/bcu-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgbase=bcu-git
 pkgname=bcu-git
-pkgver=1.1.106.r4.g81b71a2
+pkgver=1.1.108.r0.g4dea0ed
 pkgrel=1
 epoch=
 pkgdesc="bcu (Board Control Utilities)"
