--- a/aur-repo/python-bflb-iot-tool/PKGBUILD
+++ b/aur-repo/python-bflb-iot-tool/PKGBUILD
@@ -20,7 +20,12 @@ depends=(
     glibc
     libusb
     python
-    "${_pydeps[@]/#/python-}")
+    "${_pydeps[@]/#/python-}"
+    #AUR
+    python-bflb-crypto-plus
+    python-pycklink
+    python-portalocker
+)
 _pymakedeps=(
     build
     installer
