--- a/aur-repo/python-bflb-mcu-tool/lilac.yaml
+++ b/aur-repo/python-bflb-mcu-tool/lilac.yaml
@@ -5,6 +5,11 @@ pre_build_script: |
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
+repo_depends:
+  - python-pylink-square
+  - python-bflb-crypto-plus
+  - python-pycklink
+  - python-portalocker
 update_on:
   - source: pypi
     pypi: bflb-mcu-tool
