--- a/aur-repo/manhuagui-downloader/PKGBUILD
+++ b/aur-repo/manhuagui-downloader/PKGBUILD
@@ -11,17 +11,20 @@ provides=(${pkgname})
 conflicts=(${pkgname})
 # replaces=(${pkgname})
 depends=(
+    cairo
+    gcc-libs
     gdk-pixbuf2
     glib2
     glibc
     gtk3
     hicolor-icon-theme
-    webkit2gtk
+    libsoup3
+    webkit2gtk-4.1
 )
 makedepends=(
+    cargo
+    cargo-tauri
     pnpm
-    go
-    wails
 )
 backup=()
 options=(!debug !strip !lto)
@@ -29,25 +32,30 @@ options=(!debug !strip !lto)
 source=("${pkgname}-${pkgver}.tar.gz::${url}/archive/refs/tags/v${pkgver}.tar.gz")
 sha256sums=('0a238180519ada73f07d3826d85ae81325513cb080891fc03143157c94232168')
 
+prepare() {
+    cd "${srcdir}/${pkgname}-${pkgver}/src-tauri"
+    cargo fetch --target "$CARCH-unknown-linux-gnu"
+}
+
 build() {
     cd "${srcdir}/${pkgname}-${pkgver}/"
 
-    export CGO_CPPFLAGS="${CPPFLAGS}"
-    export CGO_CFLAGS="${CFLAGS}"
-    export CGO_CXXFLAGS="${CXXFLAGS}"
-    export CGO_LDFLAGS="${LDFLAGS}"
-    export GOFLAGS="-buildmode=pie -trimpath -ldflags=-linkmode=external -mod=readonly -modcacherw"
-    export GO111MODULE=on
-    export GOPROXY=https://goproxy.cn,direct
-
-    wails build
+    pnpm install
+    cd src-tauri
+    cargo build --release
+    #     pnpm tauri build
 }
+
+# check() {
+#     cd "${srcdir}/${pkgname}-${pkgver}/"
+#     cargo test --release --all-features
+# }
 
 package() {
     cd "${srcdir}/${pkgname}-${pkgver}/"
 
-    install -Dvm755 build/bin/${pkgname} -t ${pkgdir}/usr/bin
-    install -Dvm644 build/appicon.png ${pkgdir}/usr/share/icons/hicolor/512x512/apps/${pkgname}.png
+    install -Dvm755 src-tauri/target/release/${pkgname} -t ${pkgdir}/usr/bin
+    install -Dvm644 src-tauri/icons/icon.png ${pkgdir}/usr/share/icons/hicolor/512x512/apps/${pkgname}.png
     install -Dvm644 /dev/stdin ${pkgdir}/usr/share/applications/${pkgname}.desktop <<EOF
 [Desktop Entry]
 Categories=
