--- a/aur-repo/manhuagui-downloader/lilac.yaml
+++ b/aur-repo/manhuagui-downloader/lilac.yaml
@@ -5,8 +5,8 @@ pre_build_script: |
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
-repo_depends:
-  - wails
+# repo_depends:
+# -
 update_on:
   - source: github
     github: lanyeeee/manhuagui-downloader
