--- a/aur-repo/dsview-git/PKGBUILD
+++ b/aur-repo/dsview-git/PKGBUILD
@@ -46,7 +46,7 @@ pkgver() {
 prepare() {
   git -C "${srcdir}/${pkgname}" clean -dfx
   cd "${srcdir}"/${pkgname}/
-  git remote add taotieren https://github.com/taotieren/DSView
+  git remote add taotieren https://github.com/taotieren/DSView.git
   git fetch --all
   git merge taotieren/fix-build
   sed -i 's#MODE="0666"#TAG+="uaccess"#' DSView/DreamSourceLab.rules
