--- a/aur-repo/dezoomify-rs/lilac.yaml
+++ b/aur-repo/dezoomify-rs/lilac.yaml
@@ -5,8 +5,8 @@ post_build: aur_post_build
 # repo_depends:
 #   -
 update_on:
-  # - source: aur
-  #   aur: dezoomify-rs
+  - source: aur
+    aur: dezoomify-rs
   - source: github
     github: lovasoa/dezoomify-rs
     use_max_tag: true
