update groonga & pgroonga lilac.yaml

--- a/aur-repo/groonga/lilac.yaml
+++ b/aur-repo/groonga/lilac.yaml
@@ -6,5 +6,8 @@ repo_depends:
   - mecab-git
   - mecab-ipadic
 update_on:
+  - source: regex
+    url: https://groonga.org/
+    regex: 'groonga-([\d.]+).tar.gz'
   - source: aur
     aur: groonga
