--- a/aur-repo/pgroonga/lilac.yaml
+++ b/aur-repo/pgroonga/lilac.yaml
@@ -5,5 +5,9 @@ post_build: aur_post_build
 repo_depends:
   - groonga
 update_on:
+  - source: github
+    github: pgroonga/pgroonga
+    use_max_tag: true
+    # prefix: v
   - source: aur
     aur: pgroonga
