--- a/aur-repo/gmv-rs/PKGBUILD
+++ b/aur-repo/gmv-rs/PKGBUILD
@@ -44,6 +44,7 @@ build() {
     cd "${srcdir}/${_name}-${pkgver}/"
 
     sed -i 's|/home/ubuntu20/code/rs/mv/github/epimore/gmv/session/config.yml|/etc/gmv/session/config.yml|g' session/src/storage/entity.rs
+    sed -i 's|/home/ubuntu20/code/rs/mv/github/epimore/gmv/session/config.yml|/etc/gmv/session/config.yml|g' session/src/storage/mapper.rs
     export RUSTUP_TOOLCHAIN=stable
     export CARGO_TARGET_DIR=target
     #     cargo build --release --all-features
